a couple of design changes, utilized border box to prevent empty void between containers, used padding instead of margin.... added new image with max-width and height to avoid page descaling to the biggest possible view/blowout justified items in the blank container attempting to center image might need to put padding as well as width not specified.... used display flex in order to use justify and align content

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ p{
 }
 
 
+
+
 /*This more like a global body grid settings, should barely touch this, unless you want to put content on the side*/
 .container{
     background-image: url('images/backdrop2-unsplash.jpg');
@@ -21,7 +23,13 @@ p{
 
     grid-template-columns: [line1] 40px [line2] 50px [line3] auto [line4] 50px [line5] 40px [endline];
     grid-template-rows: [line1r] 1fr [line2r] auto [line3r] 4fr [last-line];
+    
 }
+
+
+
+
+
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*This is for the article block level to fix alignments and grid spanning refer to below settings*/
@@ -38,6 +46,7 @@ p{
 
     grid-template-columns: [articleline6]1fr[articleline7]1fr[articleline8]1fr [articleline9]1fr [articleline10];
     grid-template-rows: [articlerow4] 1fr [articlerow5] 1fr [articlerow6] 1fr [articlerowline7];
+    align-items: center;
 }
 
 
@@ -45,7 +54,8 @@ p{
 
 article{
     border-radius: 5px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
+    box-sizing: border-box;
     
 }
 h2{
@@ -84,4 +94,19 @@ h2{
 
 body{
     background-color: #7D7C84;
+}
+
+#blankcontainer{
+    display: flex;
+    grid-column-start: articleline9;
+    grid-column-end: articleline10;
+    grid-row-start: articlerow5;
+    grid-row-end: articlerow6;
+    align-items: center;
+    justify-content: center;
+    
+}
+#photoofcss{
+    max-width: 400px; 
+    max-height: 400px;
 }
